[doc] add kronecker features to combine molecule and system features

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -54,7 +54,6 @@
   Author                   = {Martin Jaggi},
   Booktitle                = {Proceedings of the 30th International Conference on Machine Learning},
   Year                     = {2013},
-
   Address                  = {Atlanta, Georgia, USA},
   Editor                   = {Sanjoy Dasgupta and David McAllester},
   Month                    = {17--19 Jun},
@@ -63,7 +62,14 @@
   Publisher                = {PMLR},
   Series                   = {Proceedings of Machine Learning Research},
   Volume                   = {28},
-
   Abstract                 = {We provide stronger and more general primal-dual convergence results for Frank-Wolfe-type algorithms (a.k.a. conditional gradient) for constrained convex optimization, enabled by a simple framework of duality gap certificates. Our analysis also holds if the linear subproblems are only solved approximately (as well as if the gradients are inexact), and is proven to be worst-case optimal in the sparsity of the obtained solutions. On the application side, this allows us to unify a large variety of existing sparse greedy methods, in particular for optimization over convex hulls of an atomic set, even if those sets can only be approximated, including sparse (or structured sparse) vectors or matrices, low-rank matrices, permutation matrices, or max-norm bounded matrices. We present a new general framework for convex optimization over matrix factorizations, where every Frank-Wolfe iteration will consist of a low-rank update, and discuss the broad application areas of this approach.},
   Url                      = {http://proceedings.mlr.press/v28/jaggi13.html}
 }
+
+@Article{Szedmak2020a,
+  author  = {Szedmak, Sandor and Bach, Eric},
+  journal = {arXiv preprint arXiv:2007.05943},
+  title   = {On the generalization of Tanimoto-type kernels to real valued functions},
+  year    = {2020}
+}
+
